// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generics: should compile class with type params 1`] = `
"[partial: breadcrumbs]

# ClassWithTypeParams\\<T, V\\>

[partial: comment]

## Type parameters

- \`T\`
- \`V\`


[partial: toc]

[partial: members]"
`;

exports[`Generics: should compile function with a simple type param' 1`] = `
"> **functionWithTypeParam**\\<A\\>(): \`boolean\`

## Type parameters

- \`A\`


## Returns

\`boolean\`

[partial: sources]"
`;

exports[`Generics: should compile function with complex type params' 1`] = `
"[partial: comment]

> **functionWithTypeParams**\\<A, B, C\\>(): \`boolean\`

## Type parameters

- \`A\` *extends* [\`ClassWithTypeParams\`](classes/class.ClassWithTypeParams.md)\\<\`string\`, \`number\`, \`A\`\\>[partial: comment]
- \`B\` = \`string\` \\| \`boolean\`[partial: comment]
- \`C\` = \`string\`


## Returns

\`boolean\`

[partial: sources]"
`;

exports[`Generics: should compile generics with defaults' 1`] = `"[partial: sources]"`;

exports[`Generics: should compile type with nested generics' 1`] = `
">  **nestedGenerics**: [\`Generic1\`](types/type alias.Generic1.md)\\<[\`Generic2\`](types/type alias.Generic2.md)\\<[\`Generic3\`](types/type alias.Generic3.md)\\<\`string\`\\>\\>\\>

[partial: sources]"
`;
